<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>h
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_rss_feed"
        android:title="@string/action_add_rss_feed"
        app:showAsAction="never"/>
    <item android:id="@+id/action_log_out"
        android:title="@string/action_log_out"
        app:showAsAction="never"/>
</menu>